--- a/index.html
+++ b/index.html
@@ -8,62 +8,36 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <style>
-        .navbar-nav li a {
-            text-align: center;
-            margin: 0 auto;
-        }
-
-        .card-text {
-            text-align: center;
-        }
-
-        button {
-            margin-left: 25%;
-        }
-    </style>
 </head>
+<header id="header" class="header fixed-top d-flex align-items-center">
+    <div class="container-fluid d-flex align-items-center justify-content-between">
 
-<body class="index-page" data-bs-spy="scroll" data-bs-target="#navmenu">
-    <!-- <header class="row text-dark">
-        <div class="container p-3">
-            <div class="d-flex justify-content-between align-items-center">
-                <a href="" class="mb-0 h4">
-                    <img src="assets\logo.png" width="160" height="60" />
-                </a>
-                <a href="contact_us.html" class="mb-0 h5 text-right"
-                    style="text-decoration:none; color: #fc0404;">Contact us</a>
-            </div>
-        </div>
-    </header> -->
-    <!-- Nav Bar -->
+        <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
+            <!-- Uncomment the line below if you also wish to use an image logo -->
+            <!-- <img src="assets/img/logo.png" alt=""> -->
+            <img href="index.html" src="assets\logo.png" />
+        </a>
 
-    <!-- ======= Header ======= -->
-    <header id="header" class="header fixed-top d-flex align-items-center">
-        <div class="container-fluid d-flex align-items-center justify-content-between">
+        <!-- Nav Menu -->
+        <nav id="navmenu" class="navmenu">
+            <ul>
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="">About</a></li>
+            </ul>
+            <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
+        </nav>
+        <!-- End Nav Menu -->
 
-            <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
-                <!-- Uncomment the line below if you also wish to use an image logo -->
-                <!-- <img src="assets/img/logo.png" alt=""> -->
-                <img src="assets\logo.png" />
-            </a>
+        <a class="btn-getstarted" href="contact_us.html">Contact Us</a>
 
-            <!-- Nav Menu -->
-            <nav id="navmenu" class="navmenu">
-                <ul>
-                    <li><a href="" class="active">Home</a></li>
-                    <li><a href="">About</a></li>
-                </ul>
-                <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
-            </nav><!-- End Nav Menu -->
+    </div>
+</header>
+<!-- End Header -->
+<div style="padding-bottom: 90px;"></div>
 
-            <a class="btn-getstarted" href="contact_us.html">Contact Us</a>
-
-        </div>
-    </header><!-- End Header -->
-
+<body>
     <!-- Sliding Card -->
-    <section id="hero" class="hero">
+    <section>
         <div id="carousel-hero" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="1000">
@@ -113,7 +87,7 @@
         <div class="pb-4"></div>
         <!-- CARD 1ST -->
         <div class="card-group">
-            <div class="card" style="border-radius: 20px; border-color: #fc0404;">
+            <div class="card" style="border-radius: 20px; border-color: #fc0404; text-align: center;">
                 <img src="assets\offers_1.png" class="card-img-top" alt="assets\offers_1.png">
                 <div class="card-body">
                     <h5 class="card-title text-white">Greens Hyper Market</h5>
@@ -124,7 +98,7 @@
                 </div>
             </div>
             <div class="p-2"></div>
-            <div class="card" style="border-radius: 20px; border-color: #fc0404;">
+            <div class="card" style="border-radius: 20px; border-color: #fc0404; text-align: center;">
                 <img src="assets\offers_1.png" class="card-img-top" alt="assets\offers_1.png">
                 <div class="card-body">
                     <h5 class="card-title text-white">Greens Hyper Market</h5>
@@ -135,7 +109,7 @@
                 </div>
             </div>
             <div class="p-2"></div>
-            <div class="card" style="border-radius: 20px; border-color: #fc0404;">
+            <div class="card" style="border-radius: 20px; border-color: #fc0404; text-align: center;">
                 <img src="assets\offers_1.png" class="card-img-top" alt="assets\offers_1.png">
                 <div class="card-body">
                     <h5 class="card-title text-white">Greens Hyper Market</h5>
@@ -146,7 +120,7 @@
                 </div>
             </div>
             <div class="p-2"></div>
-            <div class="card" style="border-radius: 20px; border-color: #fc0404;">
+            <div class="card" style="border-radius: 20px; border-color: #fc0404; text-align: center;">
                 <img src="assets\offers_1.png" class="card-img-top" alt="assets\offers_1.png">
                 <div class="card-body">
                     <h5 class="card-title text-white">Greens Hyper Market</h5>
@@ -160,7 +134,7 @@
         <div class="p-3"></div>
         <!-- CARD 2ND -->
         <div class="card-group">
-            <div class="card" style="border-radius: 20px; border-color: #fc0404;">
+            <div class="card" style="border-radius: 20px; border-color: #fc0404; text-align: center;">
                 <img src="assets\offers_1.png" class="card-img-top" alt="assets\offers_1.png">
                 <div class="card-body">
                     <h5 class="card-title text-white">Greens Hyper Market</h5>
@@ -171,7 +145,7 @@
                 </div>
             </div>
             <div class="p-2"></div>
-            <div class="card" style="border-radius: 20px; border-color: #fc0404;">
+            <div class="card" style="border-radius: 20px; border-color: #fc0404; text-align: center;">
                 <img src="assets\offers_1.png" class="card-img-top" alt="assets\offers_1.png">
                 <div class="card-body">
                     <h5 class="card-title text-white">Greens Hyper Market</h5>
@@ -182,7 +156,7 @@
                 </div>
             </div>
             <div class="p-2"></div>
-            <div class="card" style="border-radius: 20px; border-color: #fc0404;">
+            <div class="card" style="border-radius: 20px; border-color: #fc0404; text-align: center;">
                 <img src="assets\offers_1.png" class="card-img-top" alt="assets\offers_1.png">
                 <div class="card-body">
                     <h5 class="card-title text-white">Greens Hyper Market</h5>
@@ -193,7 +167,7 @@
                 </div>
             </div>
             <div class="p-2"></div>
-            <div class="card" style="border-radius: 20px; border-color: #fc0404;">
+            <div class="card" style="border-radius: 20px; border-color: #fc0404; text-align: center;">
                 <img src="assets\offers_1.png" class="card-img-top" alt="assets\offers_1.png">
                 <div class="card-body">
                     <h5 class="card-title text-white">Greens Hyper Market</h5>
@@ -212,7 +186,7 @@
         <h3>Products</h3>
         <div class="pb-4"></div>
         <div class="card-group ">
-            <div class="card" style="border-radius: 20px; border-color: #fc0404;">
+            <div class="card" style="border-radius: 20px; border-color: #fc0404; text-align: center;">
                 <img src="assets/phone_1.png" class="card-img-top" alt="">
                 <div class="card-body">
                     <h5 class="card-title text-white">Greens Hyper Market</h5>
@@ -223,7 +197,7 @@
                 </div>
             </div>
             <div class="p-2"></div>
-            <div class="card" style="border-radius: 20px; border-color: #fc0404;">
+            <div class="card" style="border-radius: 20px; border-color: #fc0404; text-align: center;">
                 <img src="assets/phone_1.png" class="card-img-top" alt="">
                 <div class="card-body">
                     <h5 class="card-title text-white">Greens Hyper Market</h5>
@@ -234,7 +208,7 @@
                 </div>
             </div>
             <div class="p-2"></div>
-            <div class="card" style="border-radius: 20px; border-color: #fc0404;">
+            <div class="card" style="border-radius: 20px; border-color: #fc0404; text-align: center;">
                 <img src="assets/phone_1.png" class="card-img-top" alt="">
                 <div class="card-body">
                     <h5 class="card-title text-white">Greens Hyper Market</h5>
@@ -245,7 +219,7 @@
                 </div>
             </div>
             <div class="p-2"></div>
-            <div class="card" style="border-radius: 20px; border-color: #fc0404;">
+            <div class="card" style="border-radius: 20px; border-color: #fc0404; text-align: center;">
                 <img src="assets/phone_1.png" class="card-img-top" alt="">
                 <div class="card-body">
                     <h5 class="card-title text-white">Greens Hyper Market</h5>
@@ -259,7 +233,7 @@
         <div class="p-3"></div>
         <!-- CARD 2ND -->
         <div class="card-group">
-            <div class="card" style="border-radius: 20px; border-color: #fc0404;">
+            <div class="card" style="border-radius: 20px; border-color: #fc0404; text-align: center;">
                 <img src="assets/phone_1.png" class="card-img-top" alt="">
                 <div class="card-body">
                     <h5 class="card-title text-white">Greens Hyper Market</h5>
@@ -270,7 +244,7 @@
                 </div>
             </div>
             <div class="p-2"></div>
-            <div class="card" style="border-radius: 20px; border-color: #fc0404;">
+            <div class="card" style="border-radius: 20px; border-color: #fc0404; text-align: center;">
                 <img src="assets/phone_1.png" class="card-img-top" alt="">
                 <div class="card-body">
                     <h5 class="card-title text-white">Greens Hyper Market</h5>
@@ -281,7 +255,7 @@
                 </div>
             </div>
             <div class="p-2"></div>
-            <div class="card" style="border-radius: 20px; border-color: #fc0404;">
+            <div class="card" style="border-radius: 20px; border-color: #fc0404; text-align: center;">
                 <img src="assets/phone_1.png" class="card-img-top" alt="">
                 <div class="card-body">
                     <h5 class="card-title text-white">Greens Hyper Market</h5>
@@ -292,7 +266,7 @@
                 </div>
             </div>
             <div class="p-2"></div>
-            <div class="card" style="border-radius: 20px; border-color: #fc0404;">
+            <div class="card" style="border-radius: 20px; border-color: #fc0404; text-align: center;">
                 <img src="assets/phone_1.png" class="card-img-top" alt="">
                 <div class="card-body">
                     <h5 class="card-title text-white">Greens Hyper Market</h5>
@@ -305,77 +279,46 @@
         </div>
     </section>
     <div class="p-3"></div>
-    <!-- Footer Section -->
+    <!-- Footer -->
     <footer class="text-center text-lg-start text-white" style="background-color: #fc0404; padding-top: 2px;">
-        <section class="">
-            <div class="container text-center text-md-start mt-5">
-                <div class="row mt-3">
-                    <!-- Heading 1 -->
-                    <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-                        <h6 class="text-uppercase fw-bold mb-4">
-                            <i class="fas fa-gem me-3"></i>Servin.in
-                        </h6>
-                        <p>
-                            <a href="#!" class="text-reset">Terms & Conditions</a>
-                        </p>
-                        <p>
-                            <a href="#!" class="text-reset">Privarcy Policy</a>
-                        </p>
-                    </div>
-                    <!-- Heading 2 -->
-                    <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-                        <h6 class="text-uppercase fw-bold mb-4">
-                            Products
-                        </h6>
-                        <p>
-                            <a href="#!" class="text-reset">Offers</a>
-                        </p>
-                        <p>
-                            <a href="#!" class="text-reset">Future Offers</a>
-                        </p>
-                        <p>
-                            <a href="#!" class="text-reset">Coupons</a>
-                        </p>
-                    </div>
-                    <!-- Heading 3 -->
-                    <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-                        <h6 class="text-uppercase fw-bold mb-4">
-                            Useful links
-                        </h6>
-                        <p>
-                            <a href="#!" class="text-reset">HOME</a>
-                        </p>
-                        <p>
-                            <a href="#!" class="text-reset">Contact us</a>
-                        </p>
-                        <p>
-                            <a href="#!" class="text-reset">Orders</a>
-                        </p>
-                        <p>
-                            <a href="#!" class="text-reset">Help</a>
-                        </p>
-                    </div>
-                    <!-- Heading 4 -->
-                    <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-                        <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
-                        <p><i class="fas fa-home me-3"></i> New York, NY 10012, US</p>
-                        <p>
-                            <i class="fas fa-envelope me-3"></i>
-                            info@example.com
-                        </p>
-                        <p><i class="fas fa-phone me-3"></i> + 01 234 567 88</p>
-                        <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
-                    </div>
+        <section class="container text-center text-md-start mt-5">
+            <div class="row">
+                <div class="col-12 col-md-4 col-lg-3 mb-4">
+                    <h6 class="text-uppercase fw-bold mb-4">
+                        <i class="fas fa-gem me-3"></i>Servin.in
+                    </h6>
+                    <p><a href="#!" class="text-reset">Terms & Conditions</a></p>
+                    <p><a href="#!" class="text-reset">Privacy Policy</a></p>
+                </div>
+
+                <div class="col-6 col-md-4 col-lg-2 mb-4">
+                    <h6 class="text-uppercase fw-bold mb-4">Products</h6>
+                    <p><a href="#!" class="text-reset">Offers</a></p>
+                    <p><a href="#!" class="text-reset">Future Offers</a></p>
+                    <p><a href="#!" class="text-reset">Coupons</a></p>
+                </div>
+
+                <div class="col-6 col-md-4 col-lg-2 mb-4">
+                    <h6 class="text-uppercase fw-bold mb-4">Useful links</h6>
+                    <p><a href="#!" class="text-reset">HOME</a></p>
+                    <p><a href="#!" class="text-reset">Contact us</a></p>
+                    <p><a href="#!" class="text-reset">Orders</a></p>
+                    <p><a href="#!" class="text-reset">Help</a></p>
+                </div>
+
+                <div class="col-12 col-md-4 col-lg-3 mb-4">
+                    <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
+                    <!-- <p><i class="fas fa-home me-3"></i> New York, NY 10012, US</p> -->
+                    <p><i class="fas fa-envelope me-3"></i> info@example.com</p>
+                    <p><i class="fas fa-phone me-3"></i> + 01 234 567 88</p>
+                    <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
                 </div>
             </div>
         </section>
 
-        <!-- Copyright -->
         <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-            © 2021 Copyright:
-            <h7 class="text-reset fw-bold">Servin.in All Right Reserved</h7>
+            © 2021 Copyright: <h7 class="text-reset fw-bold">Servin.in All Right Reserved</h7>
         </div>
-        <!-- Copyright -->
     </footer>
     <!-- Footer -->
 
