changed some and added 5 card

--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World</title>
+    <title>Servin</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/site.webmanifest">
+    <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -80,12 +87,13 @@
             <img src="assets/grossery_4.png" alt="Image 15">
             <img src="assets/grossery_5.jpg" alt="Image 16">
         </div>
+    </div>
 
+    <!-- CARD 1ST -->
+    <section class="container">
         <!-- Offers -->
-        <div class="pb-4"></div>
         <h3>Offers</h3>
         <div class="pb-4"></div>
-        <!-- CARD 1ST -->
         <div class="card-group">
             <div class="card" style="border-radius: 20px; border-color: #fc0404; text-align: center;">
                 <img src="assets\offers_1.png" class="card-img-top" alt="assets\offers_1.png">
@@ -130,6 +138,19 @@
                     </a>
                 </div>
             </div>
+            <div class="p-2"></div>
+            <div class="card" style="border-radius: 20px; border-color: #fc0404; text-align: center;">
+                <img src="assets\offers_1.png" class="card-img-top" alt="assets\offers_1.png">
+                <div class="card-body">
+                    <h5 class="card-title text-white">Greens Hyper Market</h5>
+                    <p class="card-text text-white">Weekend Special</p>
+                    <a href="greens_landing.html">
+                        <button href="greens_landing.html" class="btn btn-light">View Details</button>
+                    </a>
+                </div>
+            </div>
+            <div class="p-2"></div>
+
         </div>
         <div class="p-3"></div>
         <!-- CARD 2ND -->
@@ -177,9 +198,20 @@
                     </a>
                 </div>
             </div>
+            <div class="card" style="border-radius: 20px; border-color: #fc0404; text-align: center;">
+                <img src="assets\offers_1.png" class="card-img-top" alt="assets\offers_1.png">
+                <div class="card-body">
+                    <h5 class="card-title text-white">Greens Hyper Market</h5>
+                    <p class="card-text text-white">Weekend Special</p>
+                    <a href="greens_landing.html">
+                        <button href="greens_landing.html" class="btn btn-light">View Details</button>
+                    </a>
+                </div>
+            </div>
         </div>
-    </div>
-    </div>
+        </div>
+        </div>
+    </section>
     <!-- Products -->
     <section class="container">
         <div class="pb-4"></div>
@@ -229,6 +261,16 @@
                     </a>
                 </div>
             </div>
+            <div class="card" style="border-radius: 20px; border-color: #fc0404; text-align: center;">
+                <img src="assets/phone_1.png" class="card-img-top" alt="">
+                <div class="card-body">
+                    <h5 class="card-title text-white">Greens Hyper Market</h5>
+                    <p class="card-text text-white">Weekend Special</p>
+                    <a href="greens_landing.html">
+                        <button href="greens_landing.html" class="btn btn-light">View Details</button>
+                    </a>
+                </div>
+            </div>
         </div>
         <div class="p-3"></div>
         <!-- CARD 2ND -->
@@ -274,6 +316,17 @@
                     <a href="greens_landing.html">
                         <button href="greens_landing.html" class="btn btn-light">View Details</button>
                     </a>
+                </div>
+            </div>
+            <div class="card" style="border-radius: 20px; border-color: #fc0404; text-align: center;">
+                <img src="assets/phone_1.png" class="card-img-top" alt="">
+                <div class="card-body">
+                    <h5 class="card-title text-white">Greens Hyper Market</h5>
+                    <p class="card-text text-white">Weekend Special</p>
+                    <a href="greens_landing.html">
+                        <button href="greens_landing.html" class="btn btn-light">View Details</button>
+                    </a>
+                    <!-- just checking git pushingp -->
                 </div>
             </div>
         </div>
@@ -324,9 +377,8 @@
 
     <!-- <script src="script.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
-    </div>
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
+        </script>
 </body>
 
 </html>
