--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     </div>
 </header>
 <!-- End Header -->
+<meta name="Fathima Lc on Fire" content="Your current meta description here">
 <div style="padding-bottom: 90px;"></div>
 
 <body>
