Updated meta description3

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="This Website on Fire: Find all offers in Your near Mall" content="Discover the latest offers from local businesses in Kerala! Your one-stop shop for savings and convenience. Explore now!">
+    <meta name="description" content="Free Web tutorials">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <meta name="author" content="John Doe">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Servin</title>
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
