Updated meta description Again

--- a/greens_landing.html
+++ b/greens_landing.html
@@ -77,7 +77,7 @@
                 <div class="pb-4"></div>
                 <div class="card-group">
                     <div class="card" style="border-radius: 20px; border-color: #fc0404; text-align: center;">
-                        <img src="assets/phone_1.png" class="card-img-top" alt="">
+                        <img src="assets/home_page/IMG-20240210-WA0003.jpg" class="card-img-top" alt="">
                         <div class="card-body">
                             <h5 class="card-title text-white">Greens Hyper Market</h5>
                             <p class="card-text text-white">Weekend Special</p>
@@ -88,7 +88,7 @@
                     </div>
                     <div class="p-2"></div>
                     <div class="card" style="border-radius: 20px; border-color: #fc0404; text-align: center;">
-                        <img src="assets/phone_1.png" class="card-img-top" alt="">
+                        <img src="assets/home_page/IMG-20240210-WA0003.jpg" class="card-img-top" alt="">
                         <div class="card-body">
                             <h5 class="card-title text-white">Greens Hyper Market</h5>
                             <p class="card-text text-white">Weekend Special</p>
@@ -99,7 +99,7 @@
                     </div>
                     <div class="p-2"></div>
                     <div class="card" style="border-radius: 20px; border-color: #fc0404; text-align: center;">
-                        <img src="assets/phone_1.png" class="card-img-top" alt="">
+                        <img src="assets/home_page/IMG-20240210-WA0003.jpg" class="card-img-top" alt="">
                         <div class="card-body">
                             <h5 class="card-title text-white">Greens Hyper Market</h5>
                             <p class="card-text text-white">Weekend Special</p>
@@ -110,7 +110,7 @@
                     </div>
                     <div class="p-2"></div>
                     <div class="card" style="border-radius: 20px; border-color: #fc0404; text-align: center;">
-                        <img src="assets/phone_1.png" class="card-img-top" alt="">
+                        <img src="assets/home_page/IMG-20240210-WA0003.jpg" class="card-img-top" alt="">
                         <div class="card-body">
                             <h5 class="card-title text-white">Greens Hyper Market</h5>
                             <p class="card-text text-white">Weekend Special</p>
@@ -124,7 +124,7 @@
                 <!-- CARD 2ND -->
                 <div class="card-group">
                     <div class="card" style="border-radius: 20px; border-color: #fc0404; text-align: center;">
-                        <img src="assets/phone_1.png" class="card-img-top" alt="">
+                        <img src="assets/home_page/IMG-20240210-WA0003.jpg" class="card-img-top" alt="">
                         <div class="card-body">
                             <h5 class="card-title text-white">Greens Hyper Market</h5>
                             <p class="card-text text-white">Weekend Special</p>
@@ -135,7 +135,7 @@
                     </div>
                     <div class="p-2"></div>
                     <div class="card" style="border-radius: 20px; border-color: #fc0404; text-align: center;">
-                        <img src="assets/phone_1.png" class="card-img-top" alt="">
+                        <img src="assets/home_page/IMG-20240210-WA0003.jpg" class="card-img-top" alt="">
                         <div class="card-body">
                             <h5 class="card-title text-white">Greens Hyper Market</h5>
                             <p class="card-text text-white">Weekend Special</p>
@@ -146,7 +146,7 @@
                     </div>
                     <div class="p-2"></div>
                     <div class="card" style="border-radius: 20px; border-color: #fc0404; text-align: center;">
-                        <img src="assets/phone_1.png" class="card-img-top" alt="">
+                        <img src="assets/home_page/IMG-20240210-WA0003.jpg" class="card-img-top" alt="">
                         <div class="card-body">
                             <h5 class="card-title text-white">Greens Hyper Market</h5>
                             <p class="card-text text-white">Weekend Special</p>
@@ -157,7 +157,7 @@
                     </div>
                     <div class="p-2"></div>
                     <div class="card" style="border-radius: 20px; border-color: #fc0404; text-align: center;">
-                        <img src="assets/phone_1.png" class="card-img-top" alt="">
+                        <img src="assets/home_page/IMG-20240210-WA0003.jpg" class="card-img-top" alt="">
                         <div class="card-body">
                             <h5 class="card-title text-white">Greens Hyper Market</h5>
                             <p class="card-text text-white">Weekend Special</p>
@@ -173,7 +173,7 @@
                 <div class="pb-4"></div>
                 <div class="card-group ">
                     <div class="card" style="border-radius: 20px; border-color: #fc0404; text-align: center;">
-                        <img src="assets/phone_1.png" class="card-img-top" alt="">
+                        <img src="assets/home_page/IMG-20240210-WA0003.jpg" class="card-img-top" alt="">
                         <div class="card-body">
                             <h5 class="card-title text-white">Greens Hyper Market</h5>
                             <p class="card-text text-white">Weekend Special</p>
@@ -184,7 +184,7 @@
                     </div>
                     <div class="p-2"></div>
                     <div class="card" style="border-radius: 20px; border-color: #fc0404; text-align: center;">
-                        <img src="assets/phone_1.png" class="card-img-top" alt="">
+                        <img src="assets/home_page/IMG-20240210-WA0003.jpg" class="card-img-top" alt="">
                         <div class="card-body">
                             <h5 class="card-title text-white">Greens Hyper Market</h5>
                             <p class="card-text text-white">Weekend Special</p>
@@ -195,7 +195,7 @@
                     </div>
                     <div class="p-2"></div>
                     <div class="card" style="border-radius: 20px; border-color: #fc0404; text-align: center;">
-                        <img src="assets/phone_1.png" class="card-img-top" alt="">
+                        <img src="assets/home_page/IMG-20240210-WA0003.jpg" class="card-img-top" alt="">
                         <div class="card-body">
                             <h5 class="card-title text-white">Greens Hyper Market</h5>
                             <p class="card-text text-white">Weekend Special</p>
@@ -206,7 +206,7 @@
                     </div>
                     <div class="p-2"></div>
                     <div class="card" style="border-radius: 20px; border-color: #fc0404; text-align: center;">
-                        <img src="assets/phone_1.png" class="card-img-top" alt="">
+                        <img src="assets/home_page/IMG-20240210-WA0003.jpg" class="card-img-top" alt="">
                         <div class="card-body">
                             <h5 class="card-title text-white">Greens Hyper Market</h5>
                             <p class="card-text text-white">Weekend Special</p>
@@ -220,7 +220,7 @@
                 <!-- CARD 2ND -->
                 <div class="card-group">
                     <div class="card" style="border-radius: 20px; border-color: #fc0404; text-align: center;">
-                        <img src="assets/phone_1.png" class="card-img-top" alt="">
+                        <img src="assets/home_page/IMG-20240210-WA0003.jpg" class="card-img-top" alt="">
                         <div class="card-body">
                             <h5 class="card-title text-white">Greens Hyper Market</h5>
                             <p class="card-text text-white">Weekend Special</p>
@@ -231,7 +231,7 @@
                     </div>
                     <div class="p-2"></div>
                     <div class="card" style="border-radius: 20px; border-color: #fc0404; text-align: center;">
-                        <img src="assets/phone_1.png" class="card-img-top" alt="">
+                        <img src="assets/home_page/IMG-20240210-WA0003.jpg" class="card-img-top" alt="">
                         <div class="card-body">
                             <h5 class="card-title text-white">Greens Hyper Market</h5>
                             <p class="card-text text-white">Weekend Special</p>
@@ -242,7 +242,7 @@
                     </div>
                     <div class="p-2"></div>
                     <div class="card" style="border-radius: 20px; border-color: #fc0404; text-align: center;">
-                        <img src="assets/phone_1.png" class="card-img-top" alt="">
+                        <img src="assets/home_page/IMG-20240210-WA0003.jpg" class="card-img-top" alt="">
                         <div class="card-body">
                             <h5 class="card-title text-white">Greens Hyper Market</h5>
                             <p class="card-text text-white">Weekend Special</p>
@@ -253,7 +253,7 @@
                     </div>
                     <div class="p-2"></div>
                     <div class="card" style="border-radius: 20px; border-color: #fc0404; text-align: center;">
-                        <img src="assets/phone_1.png" class="card-img-top" alt="">
+                        <img src="assets/home_page/IMG-20240210-WA0003.jpg" class="card-img-top" alt="">
                         <div class="card-body">
                             <h5 class="card-title text-white">Greens Hyper Market</h5>
                             <p class="card-text text-white">Weekend Special</p>
